Archive2/7e/1e43144ce48583/output
main.cpp: In instantiation of 'void foo() [with FunctionType = Bar; T = double]':
main.cpp:48:14:   required from here
main.cpp:29:5: error: invalid use of incomplete type 'struct TD<double>'
     TD<T>();
     ^
main.cpp:4:8: error: declaration of 'struct TD<double>'
 struct TD; //type display
        ^
